--- a/RegisterLoginApplication/Web.config
+++ b/RegisterLoginApplication/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -40,4 +40,8 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
+  <connectionStrings>
+    <add name="Constring" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Project\RegisterLoginApplication\RegisterLoginApplication\App_Data\RegisterLoginDb.mdf;Integrated Security=True "/>
+  </connectionStrings>
 </configuration>
